# sentori-selfhosted

./: .dockerignore  .gitignore  LICENSE-APACHE  LICENSE-MIT  NOTICES.md  README.md  docker-compose.override.example.yml  docker-compose.yml  package.json
cli/: Cargo.toml  README.md
cli/npm/: README.md  package.json
cli/npm/scripts/: postinstall.js
cli/src/: admin.rs  dsym.rs  issue.rs  main.rs
core/: Cargo.toml  README.md  deny.toml
core/crates/alert-rule/: Cargo.toml
core/crates/alert-rule/src/: error.rs  filter.rs  lib.rs  model.rs  service.rs
core/crates/alert-rule/tests/: integration.rs  proptest_filter.rs
core/crates/analytics-store/: Cargo.toml
core/crates/argon2-password/: Cargo.toml
core/crates/argon2-password/benches/: bench.rs
core/crates/argon2-password/src/: error.rs  hash.rs  lib.rs  params.rs
core/crates/argon2-password/tests/: proptest_roundtrip.rs
core/crates/attachment-store/: Cargo.toml
core/crates/attachment-store/src/: error.rs  hash.rs  lib.rs  local_fs.rs  memory.rs  store.rs
core/crates/attachment-store/tests/: local_fs.rs  memory.rs  proptest_hash.rs  trait_compliance.rs
core/crates/audit-event/: Cargo.toml
core/crates/audit-event/src/: actions.rs  error.rs  lib.rs  model.rs  service.rs
core/crates/audit-event/tests/: integration.rs  proptest_query.rs
core/crates/auth-session/: Cargo.toml
core/crates/auth-session/src/: axum.rs  error.rs  lib.rs  options.rs  service.rs  token.rs
core/crates/auth-session/tests/: axum_middleware.rs  integration.rs  proptest_token.rs
core/crates/billing/: Cargo.toml
core/crates/billing/src/: error.rs  lib.rs  model.rs  period.rs  service.rs
core/crates/billing/tests/: integration.rs  proptest_period.rs
core/crates/cert-monitor/: Cargo.toml
core/crates/cert-monitor/src/: error.rs  lib.rs  model.rs  monitor.rs
core/crates/cert-monitor/tests/: integration.rs  proptest_parse.rs
core/crates/cookie-session/: Cargo.toml
core/crates/cookie-session/benches/: bench.rs
core/crates/cookie-session/src/: csrf.rs  ct_eq.rs  encrypted.rs  error.rs  key.rs  lib.rs  password.rs  signed.rs
core/crates/cookie-session/tests/: fixtures.rs  proptest_roundtrips.rs
core/crates/dwarf-resolver/: Cargo.toml
core/crates/dwarf-resolver/benches/: resolve.rs
core/crates/dwarf-resolver/src/: arch.rs  cache.rs  error.rs  frame.rs  lib.rs  macho.rs  module.rs  test_fixtures.rs
core/crates/dwarf-resolver/tests/: proptest_cache.proptest-regressions  proptest_cache.rs  roundtrip.rs
core/crates/event-pipeline/: Cargo.toml
core/crates/event-pipeline/src/: error.rs  lib.rs  model.rs  pipeline.rs  store.rs
core/crates/event-pipeline/tests/: integration.rs  proptest_event.rs
core/crates/event-ringbuffer/: Cargo.toml
core/crates/event-ringbuffer/benches/: ring.rs
core/crates/event-ringbuffer/src/: error.rs  lib.rs  ring.rs
core/crates/event-ringbuffer/tests/: concurrent_stress.rs  proptest_ring.rs
core/crates/geoip-reader/: Cargo.toml
core/crates/geoip-reader/benches/: bench.rs
core/crates/geoip-reader/src/: error.rs  lib.rs  reader.rs  record.rs  test_fixtures.rs
core/crates/geoip-reader/tests/: fixtures.rs  (+1 more)
core/crates/identity-fingerprint/: Cargo.toml
core/crates/ingest-token/: Cargo.toml
core/crates/integration-traits/: Cargo.toml
core/crates/issue-fingerprint/: Cargo.toml
core/crates/issue-store/: Cargo.toml
core/crates/license-jwt/: Cargo.toml
core/crates/notifier/: Cargo.toml
core/crates/privacy-salt/: Cargo.toml
core/crates/privacy-scrubber/: Cargo.toml
core/crates/proguard-resolver/: Cargo.toml
core/crates/push-provider/: Cargo.toml
core/crates/rate-limiter/: Cargo.toml
core/crates/release-store/: Cargo.toml
core/crates/replay-store/: Cargo.toml
core/crates/runtime-metrics/: Cargo.toml
core/crates/saved-view/: Cargo.toml
core/crates/secrets-vault/: Cargo.toml
core/crates/security-engine/: Cargo.toml
core/crates/session-store/: Cargo.toml
core/crates/sourcemap-resolver/: Cargo.toml
core/crates/span-store/: Cargo.toml
core/crates/stripe-webhook-verify/: Cargo.toml
core/crates/tenant-scoping/: Cargo.toml
core/crates/workspace-identity/: Cargo.toml
core/migrations/: 0001_workspace_identity.sql  0002_auth_session.sql  0003_event_pipeline.sql  0004_issue_triage.sql  0005_span_pipeline.sql  0006_push_tokens.sql  0007_replay_sessions.sql  0008_runtime_metrics.sql  0009_cert_observations.sql  0010_delivery_log.sql  0011_integrations.sql  0012_audit_log_indexes.sql  0013_alert_rules.sql  0014_saved_views.sql  0015_billing.sql  0016_tokens.sql  0017_releases.sql  0018_sessions.sql  0019_track_events.sql  0020_security_federation.sql  0021_user_reports.sql  0022_event_attachments.sql  0023_metrics.sql  0024_push_platform.sql  0025_issue_dashboard.sql  0026_notifications_email.sql  0027_org_dashboard.sql  0028_identity_advanced.sql  0029_endpoint_monitoring.sql  0030_culprit_pii.sql  0031_saasadmin.sql  0032_user_oauth_identities.sql  0033_multi_workspace.sql  0034_stripe_events.sql  0035_event_attachment_blob_hash.sql  0036_workspace_identity_scope_default.sql
migrate-tool/: Cargo.toml  Dockerfile
migrate-tool/src/: identity.rs  main.rs  report.rs  tables.rs
migrate-tool/src/tables/: analytics.rs  attachments.rs  billing.rs  dashboard.rs  dashboard_extra.rs  events.rs  identity_extras.rs  issues.rs  metrics.rs  misc.rs  notifications_email.rs  ops.rs  push.rs  releases.rs  saas.rs  sessions.rs  spans.rs  tokens.rs  workflow.rs
self-hosted/cli/: Cargo.toml
self-hosted/cli/src/: main.rs
self-hosted/server/: Cargo.toml
self-hosted/server/src/: alert_fire.rs  apns.rs  archive_worker.rs  billing_worker.rs  blob_store.rs  bootstrap.rs  client_ip.rs  fcm.rs  hcm.rs  identity_link.rs  mailer.rs  main.rs  mipush.rs  notify.rs  periodic_alert_worker.rs  probe_worker.rs  push_quarantine.rs  push_worker.rs  rate_limit.rs  saasadmin_mw.rs  security_headers.rs  session_mw.rs  state.rs  stripe.rs  symbolicate.rs  token_cache.rs  webhook.rs  webpush.rs  webpush_encrypt.rs  wire_time.rs
wasm/score/: Cargo.toml
wasm/score/src/: lib.rs
(+892 files in other folders)
