[package]
name = "sentori-cli"
version = "0.6.0-rc1"
edition = "2024"
authors = ["GOLIA K.K. <takagi@golia.jp>"]
description = "Sentori CLI — upload source maps and other release artifacts"
license = "Apache-2.0 OR MIT"
publish = false

[[bin]]
name = "sentori-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["multipart", "rustls", "json", "stream"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
object = { version = "0.39", default-features = false, features = ["read", "macho", "std"] }
