[workspace]

[package]
name = "sentori-migrate"
version = "0.2.0"
edition = "2024"
authors = ["GOLIA K.K. <takagi@golia.jp>"]
license = "Apache-2.0 OR MIT"
publish = false
rust-version = "1.97"
description = "Business-layer ETL: reads legacy sentori prod DB → writes v0.2 sentori DB. Identity-layer rename (orgs→workspaces, viewer→user) + 1:1 INSERT透传 for project-scoped business tables."

[[bin]]
name = "sentori-migrate"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "json", "macros"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde-well-known", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
