# self-hosted/cli — Sentori operator CLI.
#
# Separate from the legacy `cli/` (which is a SDK release-
# artifact uploader). This binary is the operator-side
# data export / import / dump / restore tool that ships
# with the self-hosted distribution.
#
# Standalone Cargo workspace so docker layer can build
# without dragging core/ test fixtures.

[workspace]

[package]
name = "sentori-cli"
version = "0.1.0"
edition = "2024"
authors = ["GOLIA K.K. <takagi@golia.jp>"]
license = "Apache-2.0 OR MIT"
publish = false
rust-version = "1.97"
description = "Sentori operator CLI — export / import / dump / restore for self-hosted operators."

[[bin]]
name = "sentori-cli"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
time = { version = "0.3", features = ["serde-well-known"] }
uuid = { version = "1", features = ["v7", "serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
